<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalRhythm</string>
    <string name="app_desc1">Location-based</string>
    <string name="app_desc2">streaming music player</string>
    <string name="echonestlogo">The Echo Nest logo</string>
    <string name="fmalogo">Free Music Archive logo</string>
    <string name="log_in_to_spotify">Log into Spotify</string>
    <string name="copyright_notice">© 2015 michael david holloway</string>
    <string name="about">About</string>
    <string name="poweredby">Powered by:</string>

</resources>
