<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

<ImageView
    android:id="@+id/unisphere"
    android:layout_width="196dp"
    android:layout_height="108dp"
    android:layout_centerInParent="true"
    android:layout_marginTop="36dp"
    android:layout_marginBottom="12dp"
    android:src="@drawable/unisphere_transparent" />

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/unisphere"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:textSize="48sp"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/app_desc1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/app_desc2"/>

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/unisphere"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="-6dp"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/poweredby"/>

    <ImageView
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/echonestlogo"
        android:src="@drawable/echonestnewtrans" />

    <ImageView
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/fmalogo"
        android:src="@drawable/fmatrans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/copyright_notice"/>

</LinearLayout>

</RelativeLayout>